# django-w-docs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  docker-image.yml
docs/: __init__.py  apps.py
docs/api/: __init__.py  apps.py  urls.py
docs/apps/: __init__.py  signals.py
docs/apps/home/: apps.py  models.py
docs/apps/home/migrations/: 0003_alter_home_options.py
docs/apps/home/tests/: __init__.py  test_models.py
docs/apps/indexes/: __init__.py  apps.py  models.py
docs/apps/indexes/migrations/: 0001_initial.py  0002_alter_docsindex_content.py
docs/apps/indexes/tests/: __init__.py  test_models.py
docs/apps/pages/: __init__.py  apps.py  models.py
docs/apps/pages/migrations/: 0001_initial.py  0002_initial.py  0003_alter_docspage_content.py  0004_alter_docspage_content.py  0005_formfield_frompage_alter_docspage_content.py  0006_frompage_tags_formfield_job.py  0007_alter_docspage_content_alter_frompage_content.py
docs/apps/pages/tests/: __init__.py  test_models.py
docs/apps/sections/: __init__.py  apps.py  models.py
docs/apps/sections/migrations/: 0001_initial.py  0002_alter_docssection_content.py
docs/apps/sections/tests/: __init__.py  test_models.py
docs/apps/tags/: apps.py  models.py
docs/apps/tags/migrations/: 0001_initial.py  0002_fromtag.py
docs/cms/: __init__.py  apps.py  blocks.py  wagtail_hooks.py
docs/ui/: __init__.py  apps.py  urls.py  views.py
docs/ui/locale/ar/LC_MESSAGES/: django.po
docs/ui/locale/cn/LC_MESSAGES/: django.po
docs/ui/locale/de/LC_MESSAGES/: django.po
docs/ui/locale/es/LC_MESSAGES/: django.po
docs/ui/locale/fr/LC_MESSAGES/: django.po
docs/ui/locale/tr/LC_MESSAGES/: django.po
docs/ui/static/docs/: README.md  package-lock.json  package.json
docs/ui/static/docs/css/: app.css  styles.css
docs/ui/templates/docs/: base.html  form_page.html  form_page_landing.html  index.html  page.html  search.html  section.html
docs/ui/templates/docs/components/: article-1.html  article-2.html  article.html  breadcrumbs.html  prev_next.html  theme.html  tree.html
docs/ui/templates/registration/: logged_out.html  login.html
docs/ui/templates/rest_framework/: api.html
docs/ui/templatetags/: docs.py
