[tool.poetry]
name = "django-w-docs"
version = "1.0.8"
description = "a reusable, production-ready documentation application built with Python, Django, Django REST Framework, and Wagtail CMS, styled with Tailwind CSS and daisyUI. It comes with sensible defaults, modern theming, and clean APIs—helping you launch structured, searchable documentation quickly and scale it with confidence."
authors = ["Yousef Abu Shanab <josephyousef249@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "docs" }]
homepage = "https://github.com/youzarsiph/django-w-docs"
repository = "https://github.com/youzarsiph/django-w-docs"
documentation = "https://github.com/youzarsiph/django-w-docs"

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=5.2.1"
djangorestframework = ">=3.16.0"
drf-restwind = ">=0.2.0"
wagtail = ">=7.0"
wagtail-tw-blocks = ">=0.2.6"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = ">=6.0.0"
black = ">=25.1.0"
ruff = ">=0.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
